--- a/inst/nnrrIndikatorer.Rnw
+++ b/inst/nnrrIndikatorer.Rnw
@@ -638,14 +638,32 @@ Indikatorer <- Indikatorer[Indikatorer$year >= 2018, ]
 
 # write.csv2(Indikatorer, paste0('~/data/nnrr/nnrr_ind_', Sys.Date(), '.csv'), row.names = F, fileEncoding = "UTF-8")
 
-# dg <- read.csv2("~/data/nnrr/dg_nnrr_raa.csv", header = T)
-# dg$orgnr <- map_resh_orgnr$orgnr_sh[match(dg$reshid, map_resh_orgnr$resh)]
+dg <- readr::read_csv2("~/data/nnrr/dg_nnrr_raa.csv", locale = locale(encoding = "Latin1"))
+dg$orgnr <- map_resh_orgnr$orgnr_sh[match(dg$reshid, map_resh_orgnr$resh)]
+
+
+map_dg2 <- data.frame(enhet=c("Sandnessjøen", "St Olavs", "Harstad", "Tromsø",
+                              "Stavanger", "Oslo", "Møre og Romsdal", "Kristiansand",
+                              "Haukeland", "Drammen", "Levanger"),
+                      avdresh = c(102169, 104293, 700735, 601032, 4211588, 109834,
+                                  4212982, 114174, 102959, 103736, 105821))
+
+dg_ny <- readr::read_csv2("~/data/nnrr/Dekningsgrad 2021 NNRR.csv", locale = locale(encoding = "Latin1"))
+dg_ny$reshid <- map_dg2$avdresh[match(dg_ny$Enhet, map_dg2$enhet)]
+dg_ny$orgnr <- map_resh_orgnr$orgnr_sh[match(dg_ny$reshid, map_resh_orgnr$resh)]
+dg_ny <- dg_ny[!is.na(dg_ny$orgnr)]
+dg_ny$year <- 2021
+names(dg_ny)[2:3] <- c("denominator", "var")
+dg_ny <- dg_ny[,c("orgnr", "year", "var", "denominator")]
+
 # dg$shus2 <- qmongrdata::SykehusNavnStruktur$SykehusNavn[match(dg$orgnr, qmongrdata::SykehusNavnStruktur$OrgNrShus)]
 #
-# dg <- dg[,c("orgnr", "aar", "teller", "nevner")]
-# names(dg) <- c("orgnr", "year", "var", "denominator")
-# dg$ind_id <- "nnrr_dg"
-# dg$context <- "caregiver"
+dg <- dg[,c("orgnr", "aar", "teller", "nevner")]
+names(dg) <- c("orgnr", "year", "var", "denominator")
+
+dg <- dplyr::bind_rows(dg, dg_ny)
+dg$ind_id <- "nnrr_dg"
+dg$context <- "caregiver"
 
 # write.csv2(dg, paste0('~/data/nnrr/dg_nnrr_', Sys.Date(), '.csv'), row.names = F, fileEncoding = "UTF-8")
 @
