--- a/inst/KvartalsrapportNNRR_v2.Rnw
+++ b/inst/KvartalsrapportNNRR_v2.Rnw
@@ -206,7 +206,7 @@ print(xtable::xtable(samlet, align=c('l', 'l', rep('r', ncol(samlet)-1)),
 outfile <- paste0(figfolder, "alder.pdf")
 valgtVar <- "PatientAge"
 nnrrFigAndeler(RegData, valgtVar=valgtVar, datoFra=datoFra_sistkvartal, datoTil=datoTil, enhetsUtvalg=1,
-                        minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID)
+               minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID)
 @
 
 \begin{figure}[ht]
@@ -221,75 +221,111 @@ outfile <- paste0(figfolder, "andel_tverrfaglig.pdf")
 # outfile <- ""
 valgtVar <- "tverrfaglig_behandlet"
 nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
-                               minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
                 tidsenhet="Kvartal", inkl_konf=0, maal = 30, maalnivaatxt = "Mål")
+
+plotdata <- nnrr::nnrrBeregnAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
+                                     minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                                     tidsenhet="Kvartal", maal = 30, maalnivaatxt = "Mål")
+nnrr::nnrrTidsplot(plotdata = plotdata,
+                   outfile='')
 
 outfile <- paste0(figfolder, "individuell_oppfolging.pdf")
 valgtVar <- "individuell_oppfolging"
 nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
-                               minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
                 tidsenhet="Kvartal", inkl_konf=0)
 
 outfile <- paste0(figfolder, "smerter_2aar.pdf")
 valgtVar <- "smerter_2aar"
 nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
-                               minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
                 tidsenhet="Kvartal", inkl_konf=0)
 
 
 outfile <- paste0(figfolder, "fabq11.pdf")
 valgtVar <- "fabq11"
 nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
-                               minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
                 tidsenhet="Kvartal", inkl_konf=0)
 
 outfile <- paste0(figfolder, "Oppfolging_utfylt.pdf")
 valgtVar <- "Oppfolging_utfylt"
 nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
-                               minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
                 tidsenhet="Kvartal", inkl_konf=0, datovar = "dato_oppfolg")
 
 outfile <- paste0(figfolder, "opplevd_nytte_beh.pdf")
 valgtVar <- "opplevd_nytte_beh"
 nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
-                               minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
                 tidsenhet="Kvartal", inkl_konf=0, datovar = "dato_oppfolg")
 
 
-outfile <- paste0(figfolder, "odi_klinisk_viktig.pdf")
-valgtVar <- "odi_klinisk_viktig"
+outfile <- paste0(figfolder, "odi_klinisk_viktig_6mnd.pdf")
+valgtVar <- "odi_klinisk_viktig_6mnd"
 nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
-                               minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
                 tidsenhet="Kvartal", inkl_konf=0, datovar = "dato_oppfolg")
 
-outfile <- paste0(figfolder, "bedring_smerte_hvile.pdf")
-valgtVar <- "bedring_smerte_hvile"
+outfile <- paste0(figfolder, "odi_klinisk_viktig_12mnd.pdf")
+valgtVar <- "odi_klinisk_viktig_12mnd"
 nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
-                               minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                tidsenhet="Kvartal", inkl_konf=0, datovar = "dato_oppfolg2")
+
+outfile <- paste0(figfolder, "bedring_smerte_hvile_6mnd.pdf")
+valgtVar <- "bedring_smerte_hvile_6mnd"
+nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
                 tidsenhet="Kvartal", inkl_konf=0, datovar = "dato_oppfolg")
 
-outfile <- paste0(figfolder, "bedring_smerte_aktiv.pdf")
-valgtVar <- "bedring_smerte_aktiv"
+outfile <- paste0(figfolder, "bedring_smerte_hvile_12mnd.pdf")
+valgtVar <- "bedring_smerte_hvile_12mnd"
 nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
-                               minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                tidsenhet="Kvartal", inkl_konf=0, datovar = "dato_oppfolg2")
+
+outfile <- paste0(figfolder, "bedring_smerte_aktiv_6mnd.pdf")
+valgtVar <- "bedring_smerte_aktiv_6mnd"
+nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
                 tidsenhet="Kvartal", inkl_konf=0, datovar = "dato_oppfolg")
 
-outfile <- paste0(figfolder, "fornoyd.pdf")
-valgtVar <- "fornoyd"
+outfile <- paste0(figfolder, "bedring_smerte_aktiv_12mnd.pdf")
+valgtVar <- "bedring_smerte_aktiv_12mnd"
 nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
-                               minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                tidsenhet="Kvartal", inkl_konf=0, datovar = "dato_oppfolg2")
+
+outfile <- paste0(figfolder, "fornoyd_6mnd.pdf")
+valgtVar <- "fornoyd_6mnd"
+nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
                 tidsenhet="Kvartal", inkl_konf=0, datovar = "dato_oppfolg")
+
+outfile <- paste0(figfolder, "fornoyd_12mnd.pdf")
+valgtVar <- "fornoyd_12mnd"
+nnrrFigAndelTid(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1,
+                minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID,
+                tidsenhet="Kvartal", inkl_konf=0, datovar = "dato_oppfolg2")
 
 outfile <- paste0(figfolder, "fornoyd_gruppert.pdf")
-valgtVar <- "fornoyd"
+valgtVar <- "fornoyd_6mnd"
 nnrrFigAndelGrvar(RegData, valgtVar=valgtVar, datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1, datovar="dato_oppfolg",
-                            minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID, grvar="beh_spes_v3",
-                            grtittel="Behandling i spesialisthelsetjenesten")
+                  minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID, grvar="beh_spes_v3",
+                  grtittel="Behandling i spesialisthelsetjenesten")
 
-outfile <- paste0(figfolder, "opplevd_nytte_beh_gruppert.pdf")
-nnrrFigAndelGrvar(RegData, valgtVar="opplevd_nytte_beh", datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1, datovar="dato_oppfolg",
-                            minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID, grvar="beh_spes_v3",
-                            grtittel="Behandling i spesialisthelsetjenesten")
+outfile <- paste0(figfolder, "opplevd_nytte_beh_gruppert_6mnd.pdf")
+nnrrFigAndelGrvar(RegData, valgtVar="opplevd_nytte_beh_6mnd", datoFra=datoFra, datoTil=datoTil, enhetsUtvalg=1, datovar="dato_oppfolg",
+                  minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID, grvar="beh_spes_v3",
+                  grtittel="Behandling i spesialisthelsetjenesten")
+
+outfile <- paste0(figfolder, "opplevd_nytte_beh_gruppert_12mnd.pdf")
+nnrrFigAndelGrvar(RegData, valgtVar="opplevd_nytte_beh_12mnd", datoFra=datoFra, datoTil=datoTil,
+                  enhetsUtvalg=1, datovar="dato_oppfolg2",
+                  minald=0, maxald=130, erMann=99, outfile=outfile, reshID=reshID, grvar="beh_spes_v3",
+                  grtittel="Behandling i spesialisthelsetjenesten")
 @
 
 
@@ -329,13 +365,13 @@ Det er viktig å merke seg at langt fra alle pasienter fyller ut oppfølgingsskj
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}opplevd_nytte_beh.pdf}
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}opplevd_nytte_beh_6mnd.pdf}
 \caption{Andel pasienter som rapporterer nytte (helt, mye eller litt bedre) av utredning/behandling i egen spesialisthelsetjeneste sammenlignet med landet for øvrig siste 4 kvartal.}
 \end{figure}
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}opplevd_nytte_beh_gruppert.pdf}
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}opplevd_nytte_beh_gruppert_6mnd.pdf}
 \caption{Andel pasienter som rapporterer nytte (helt, mye eller litt bedre) av utredning/behandling i egen spesialisthelsetjeneste sammenlignet med landet for øvrig siste 4 kvartal. Gruppert etter type behandling.}
 \end{figure}
 
@@ -345,7 +381,7 @@ Det er viktig å merke seg at langt fra alle pasienter fyller ut oppfølgingsskj
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}odi_klinisk_viktig.pdf}
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}odi_klinisk_viktig_6mnd.pdf}
 \caption{Andel pasienter som har hatt klinisk bedring i funksjon (ODI) (30 \% eller mer) i egen spesialisthelsetjeneste sammenlignet med landet for øvrig siste 4 kvartal.}
 \end{figure}
 
@@ -355,13 +391,13 @@ Det er viktig å merke seg at langt fra alle pasienter fyller ut oppfølgingsskj
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}bedring_smerte_hvile.pdf}
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}bedring_smerte_hvile_6mnd.pdf}
 \caption{Andel pasienter som har hatt klinisk bedring av smerte (30 \% eller mer reduksjon) i hvile i egen spesialisthelsetjeneste sammenlignet med landet for øvrig siste 4 kvartal.}
 \end{figure}
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}bedring_smerte_aktiv.pdf}
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}bedring_smerte_aktiv_6mnd.pdf}
 \caption{Andel pasienter som har hatt klinisk bedring av smerte (30 \% eller mer reduksjon) i aktivitet i egen spesialisthelsetjeneste sammenlignet med landet for øvrig siste 4 kvartal.}
 \end{figure}
 
@@ -371,13 +407,13 @@ Det er viktig å merke seg at langt fra alle pasienter fyller ut oppfølgingsskj
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}fornoyd.pdf}
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}fornoyd_6mnd.pdf}
 \caption{Andel pasienter som angir å være fornøyd eller nøytral i møte med personalet ved sykehuset når spurt ved oppfølging sammenlignet med landet for øvrig siste 4 kvartal.}
 \end{figure}
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}fornoyd_gruppert.pdf}
+\includegraphics[width=\Sexpr{figstr}\textwidth]{\Sexpr{figfolder}fornoyd_gruppert_6mnd.pdf}
 \caption{Andel pasienter som angir å være fornøyd eller nøytral i møte med personalet ved sykehuset når spurt ved oppfølging sammenlignet med landet for øvrig siste 4 kvartal.  Gruppert etter type behandling.}
 \end{figure}
 
